# everyday-rewards-receipts

./: .gitignore  Cargo.toml  LICENCE  README.md  api.http
.github/workflows/: build.yml
src/: RewardsActivityFeed.graphql  client.rs  main.rs  models.rs
