[package]
name = "everyday-rewards-receipts"
version = "0.1.0"
authors = ["Thomas Fowler"]
edition = "2021"
description = "Command line tool to download all receipts from your everyday rewards account"
readme = "README.md"
homepage = "https://github.com/T-Fowl/everyday-rewards-receipts"
repository = "https://github.com/T-Fowl/everyday-rewards-receipts"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["raw_value"] }
thiserror = "1.0.37"
